--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 .vs/slnx.sqlite
 .vs/ProjectSettings.json
+01 - project/02-project/node_modules
+.vs/js-gb-second-18.09/v16/.suo
+.vs/VSWorkspaceState.json
