--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 .vs/ProjectSettings.json
 .idea/
 01 - project/02-project/node_modules
+01 - project/04-project/node_modules
 .vs/js-gb-second-18.09/v16/.suo
 .vs/VSWorkspaceState.json
