--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 01 - project/02-project/node_modules
 .vs/js-gb-second-18.09/v16/.suo
 .vs/VSWorkspaceState.json
+02 - students/Yulia Anikeeva/HW1/.DS_Store
