--- a/02 - students/Леонид Кудряшов/HW/5/package.json
+++ b/02 - students/Леонид Кудряшов/HW/5/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project",
+  "name": "eShop",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,14 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "moment": "^2.24.0",
-    "nodemon": "^1.19.3",
-    "package.json": "^2.0.1"
-  },
-  "nodemonConfig": {
-    "ignore": [
-      "*.json"
-    ]
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.9"
   }
 }
