--- a/02 - students/Александр Прокофьев/project/package.json
+++ b/02 - students/Александр Прокофьев/project/package.json
@@ -8,7 +8,16 @@
     "moment": "^2.24.0"
   },
   "devDependencies": {
-    "nodemon": "^1.19.3"
+    "@babel/core": "^7.6.4",
+    "@babel/polyfill": "^7.6.0",
+    "@babel/preset-env": "^7.6.3",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "nodemon": "^1.19.4",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9"
   },
   "nodemonConfig": {
     "ignore": [
@@ -16,7 +25,8 @@
     ]
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "nodemon server/server.js",
+    "build": "webpack --mode development"
   },
   "keywords": [],
   "author": "",
